--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,7 +9,7 @@ before_script:
   - node -v
   - which node
   - yarn config set registry http://10.80.84.176:4873/
-  - yarn install
+  - nvm use 12.18.3 && yarn install
   - whoami
 
 stages:
@@ -23,4 +23,4 @@ deploy_dev:
     # 指定当前job的运行环境，$CI_COMMIT_REF_NAME代表当前分支名
     name: dev/$CI_COMMIT_REF_NAME
   script:
-    - yarn build
+    - nvm use 12.18.3 && yarn build
